优化完善redis支持，通过分布式会话变量属性，去除websocket